examples/rate-route-path-https.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rates
spec:
  parentRefs:
  - name: my-hotel
    sectionName: http
  - name: my-hotel
    sectionName: https
  rules:
  - backendRefs:
    - name: parking
      kind: Service
      port: 8090
    matches:
    - path:
        type: PathPrefix
        value: /parking
  - backendRefs:
    - name: review
      kind: Service
      port: 8090
    matches:
    - path:
        type: PathPrefix
        value: /review
